# Testing-Agent

./: .env.example  README.md  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml
artifacts/feature_files/: generated.feature
artifacts/playwright_tests/: generated.spec.ts
artifacts/reports/: gherkin_output.json  pii_masked_output.json  playwright_output.json
playwright-report/: index.html
requirements/: pyproject_alignment.md  requirements.txt
src/qa_rag_agent/: __init__.py
src/qa_rag_agent/api/: __init__.py  app.py  main.py  routes.py  schemas.py
src/qa_rag_agent/core/: config.py
src/qa_rag_agent/generation/: __init__.py  playwright_generator.py
src/qa_rag_agent/gherkin/: __init__.py  generator.py
src/qa_rag_agent/ingestion/: __init__.py  reader.py
src/qa_rag_agent/pii/: __init__.py  masker.py
src/qa_rag_agent/prompts/: __init__.py  builder.py
src/qa_rag_agent/reports/: __init__.py  report_generator.py
src/qa_rag_agent/retrieval/: __init__.py  vector_store.py
src/qa_rag_agent/samples/: qa-103.json  qa-104.json  qa-105.json
tests/: __init__.py  test_gherkin_generator.py  test_mvp_modules.py  test_playwright_generator.py
uploads/: sample_story.txt
