[project]
name = "kashyap-qa-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "presidio-analyzer>=2.2.363",
    "presidio-anonymizer>=2.2.363",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]
